<resources>
    <string name="app_name">Heroes</string>
    <string name="username">Username</string>
    <string name="todo">TODO</string>
    <string name="your_name">Your Name</string>
    <string name="_5">5</string>
    <string name="_12">12</string>
    <string name="_14">14</string>
    <string name="_16">16</string>
    <string name="_18">18</string>
    <string name="start_game">Start Game</string>
</resources>